# carsties-modular-monolith-fastapi

./: .env.example  .gitattributes  .gitignore  .importlinter  README.md  alembic.ini  docker-compose.yml  pyproject.toml  python_modular_monolith.md
alembic/: env.py
alembic/versions/: 0001_initial_create.py  0002_outbox.py
docs/: README.md  auditing.md  authorization.md  azure-integration.md  logging.md  observability-opentelemetry.md  python_modular_monolith.md  realtime-sse.md  repository-pattern.md
keycloak/: carsties-realm.json
src/carsties/: gateway.py  main.py
src/carsties/modules/auctions/: contract.py
src/carsties/modules/auctions/api/: router.py  schemas.py
src/carsties/modules/auctions/application/: commands.py  consumers.py  mapping.py  service.py
src/carsties/modules/auctions/domain/: entities.py
src/carsties/modules/auctions/infrastructure/: outbox.py  seed.py
src/carsties/modules/search/: contract.py
src/carsties/modules/search/api/: router.py  schemas.py
src/carsties/modules/search/application/: consumers.py  mapping.py  queries.py  sync.py
src/carsties/modules/search/infrastructure/: db.py  repository.py
src/carsties/shared/: auth.py  database.py  events.py  schemas.py  settings.py
tests/: test_gateway.py
tests/auctions/: test_mapping.py  test_schemas.py
tests/search/: test_queries.py
tests/shared/: test_events.py
